

add_executable(gpu_test gpu_test.cpp)
add_dependencies(gpu_test CLIc)
target_link_libraries(gpu_test PRIVATE CLIc::CLIc)
add_test(NAME core_gpu_test COMMAND ${CMAKE_CURRENT_BINARY_DIR}/gpu_test)
set_target_properties(gpu_test PROPERTIES FOLDER "Tests")

add_executable(scalar_test scalar_test.cpp)
add_dependencies(scalar_test CLIc)
target_link_libraries(scalar_test PRIVATE CLIc::CLIc)
add_test(NAME core_scalar_test_int COMMAND ${CMAKE_CURRENT_BINARY_DIR}/scalar_test 1)
add_test(NAME core_scalar_test_float COMMAND ${CMAKE_CURRENT_BINARY_DIR}/scalar_test 1.5)
set_target_properties(scalar_test PROPERTIES FOLDER "Tests")

add_executable(buffer_test buffer_test.cpp)
add_dependencies(buffer_test CLIc)
target_link_libraries(buffer_test PRIVATE CLIc::CLIc)
add_test(NAME core_buffer_test_1d COMMAND ${CMAKE_CURRENT_BINARY_DIR}/buffer_test 10 1 1)
add_test(NAME core_buffer_test_2d COMMAND ${CMAKE_CURRENT_BINARY_DIR}/buffer_test 10 5 1)
add_test(NAME core_buffer_test_3d COMMAND ${CMAKE_CURRENT_BINARY_DIR}/buffer_test 10 5 3)
set_target_properties(buffer_test PROPERTIES FOLDER "Tests")

add_executable(image_test image_test.cpp)
add_dependencies(image_test CLIc)
target_link_libraries(image_test PRIVATE CLIc::CLIc)
add_test(NAME core_image_test_1d COMMAND ${CMAKE_CURRENT_BINARY_DIR}/image_test 10 1 1)
add_test(NAME core_image_test_2d COMMAND ${CMAKE_CURRENT_BINARY_DIR}/image_test 10 5 1)
add_test(NAME core_image_test_3d COMMAND ${CMAKE_CURRENT_BINARY_DIR}/image_test 10 5 3)
set_target_properties(image_test PROPERTIES FOLDER "Tests")

add_executable(kernel_test kernel_test.cpp)
add_dependencies(kernel_test CLIc)
target_link_libraries(kernel_test PRIVATE CLIc::CLIc)
add_test(NAME core_kernel_test_1d COMMAND ${CMAKE_CURRENT_BINARY_DIR}/kernel_test 10 1 1)
add_test(NAME core_kernel_test_2d COMMAND ${CMAKE_CURRENT_BINARY_DIR}/kernel_test 10 5 1)
add_test(NAME core_kernel_test_3d COMMAND ${CMAKE_CURRENT_BINARY_DIR}/kernel_test 10 5 3)
set_target_properties(kernel_test PROPERTIES FOLDER "Tests")
